# installer

./: .gitignore  Cargo.toml  README.md  build.rs  downloads.toml  patchnotes.txt
src/: app.rs  install.rs  main.rs  uninstall.rs
src/ui/: done.rs  mod.rs  options.rs  patchnotes.rs  progress.rs  welcome.rs
