[package]
name = "installer"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34", features = ["default"] }
egui = "0.34"
winreg = "0.56"
rfd = "0.17"
anyhow = "1"
ureq = "3.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winres = "0.1"
